feat: Add logging to upsert events (#550)
Ticket: https://sikt.atlassian.net/browse/NP-49728

Changes: 

- Adds detailed logging around events that create/update significant
data (candidates, approvals, reporting periods) to make future debugging
easier. Note that this includes the username and organization ID where
appropriate.
- Replaces a few calls to `.collect(Collectors.toList())` with
`toList()`